fix z-index on overlay

--- a/assets/imagemanager.scss
+++ b/assets/imagemanager.scss
@@ -3,7 +3,7 @@
 image-manager {
     file-manager {
         .fm-overlay {
-            z-index: 1;
+            z-index: 1000;
         }
     }
 }
